prefix workspace type containers wit "ws-"

--- a/ws-python/Dockerfile
+++ b/ws-python/Dockerfile
@@ -4,8 +4,8 @@ MAINTAINER Fabian Jakobs <fabian@c9.io>
 ADD ./files /home/ubuntu
 
 RUN cd /home/ubuntu/workspace && \
-    rm -rf .git* && \
     pip install django && \
+    chmod -R g+w /home/ubuntu/workspace && \
     chown -R ubuntu:ubuntu /home/ubuntu
     
 CMD /bin/bash -l
