--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -133,8 +133,8 @@ RUN cp /tmp/homedir/.gitignore /tmp/homedir/.hgignore && \
     chown -R ubuntu:ubuntu /tmp/homedir && \
     bash -c "shopt -s dotglob && cp -a /tmp/homedir/* /home/ubuntu" && \
     rm -rf /tmp/homedir && \
-    chown root:root /etc/profile.d/{nada-nix-compat,cloud9}.sh && \
-    chmod 644 /etc/profile.d/{nada-nix-compat,cloud9}.sh && \
+    chown root:root /etc/profile.d/nada-nix-compat.sh /etc/profile.d/cloud9.sh && \
+    chmod 644 /etc/profile.d/nada-nix-compat.sh /etc/profile.d/cloud9.sh && \
     sudo -u ubuntu -i bash -c "mkdir -p /home/ubuntu/.ssh"
 
 # re-enable service startup. This line must come after all apt-get installs
