--- a/ws-cpp/Dockerfile
+++ b/ws-cpp/Dockerfile
@@ -1,7 +1,7 @@
 FROM cloud9/workspace
 MAINTAINER Fabian Jakobs <fabian@c9.io>
 
-ADD ./files /home/ubuntu
+ADD ./files/workspace /home/ubuntu/workspace
 
 RUN chmod -R g+w /home/ubuntu/workspace && \
     chown -R ubuntu:ubuntu /home/ubuntu/workspace
