--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -139,7 +139,8 @@ RUN cp /tmp/homedir/.gitignore /tmp/homedir/.hgignore && \
     chown -R ubuntu:ubuntu /home/ubuntu/lib && \
     chown root:root /etc/profile.d/nada-nix-compat.sh /etc/profile.d/cloud9.sh /etc/apache2/envvars && \
     chmod 644 /etc/profile.d/nada-nix-compat.sh /etc/profile.d/cloud9.sh /etc/apache2/envvars && \
-    sudo -u ubuntu -i bash -c "mkdir -p /home/ubuntu/.ssh"
+    sudo -u ubuntu -i bash -c "mkdir -p /home/ubuntu/.ssh" && \
+    touch /etc/init.d/systemd-logind
 
 # re-enable service startup. This line must come after all apt-get installs
 RUN rm -f /usr/sbin/policy-rc.d
