--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -28,9 +28,11 @@ RUN apt-get install -y console-setup sudo wget curl git python software-properti
 # install ruby/rails/rvm (this comes early because it takes very long to rebuild)
 RUN sudo -u ubuntu -i bash -l -c "curl -L https://get.rvm.io | sudo bash -s" && \
     usermod -a -G rvm ubuntu
-RUN sudo -u ubuntu -i bash -l -c "rvm install ruby-2.1.1 && rvm --default use 2.1.1" && \
+RUN sudo -u ubuntu -i bash -l -c "rvm install ruby-1.8.7" && \
     /usr/local/rvm/bin/rvm cleanup all
 RUN sudo -u ubuntu -i bash -l -c "rvm install ruby-1.9.3" && \
+    /usr/local/rvm/bin/rvm cleanup all
+RUN sudo -u ubuntu -i bash -l -c "rvm install ruby-2.1.1 && rvm --default use 2.1.1" && \
     /usr/local/rvm/bin/rvm cleanup all
 RUN sudo -u ubuntu -i bash -l -c "rvm use 2.1.1 && rvm gemset create rails4 && rvm gemset use rails4 && gem install rails -v 4.0.2" && \
     sudo -u ubuntu -i bash -l -c "rvm use 2.1.1 && rvm gemset use rails4 && gem install bundler -v '>= 1.5.1'" && \
