--- a/ws-python/Dockerfile
+++ b/ws-python/Dockerfile
@@ -1,9 +1,9 @@
 FROM cloud9/workspace
-MAINTAINER Fabian Jakobs <fabian@c9.io>
+MAINTAINER Fabian Jakobs <fabian@c9.io
+
+RUN pip install django
 
 ADD ./files /home/ubuntu
 
-RUN cd /home/ubuntu/workspace && \
-    pip install django && \
-    chmod -R g+w /home/ubuntu/workspace && \
+RUN chown -R ubuntu:ubuntu /home/ubuntu && \
     chown -R ubuntu:ubuntu /home/ubuntu
