Add python3-pip and assume  on

--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -119,7 +119,8 @@ RUN sudo a2enmod rewrite
 RUN sudo -u ubuntu -i bash -l -c "nvm install 0.11"
 RUN curl -sS https://getcomposer.org/installer | php
 RUN mv composer.phar /usr/bin/composer
-RUN apt-get install php5-mcrypt
+RUN apt-get install -y php5-mcrypt
+RUN apt-get install -y python3-pip
 
 # setup the system
 RUN echo -n "" > /etc/motd && \
