Installing `rhc` as ubuntu user

--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -97,7 +97,7 @@ RUN wget -qO- https://toolbelt.heroku.com/install-ubuntu.sh | sh -e && \
     sudo -u ubuntu -i bash -l -c "npm install jitsu@0.13.15 -g" && \
     sudo -u ubuntu -i bash -l -c "npm install azure-cli@0.8.2 -g" && \
     sudo -u ubuntu -i bash -l -c "npm install grunt@0.4.4 -g" && \
-    gem install rhc -v 1.23.7 && \
+    sudo -u ubuntu -i bash -l -c "gem install rhc -v 1.28.5" && \
     wget -O /tmp/deb.deb http://go-cli.s3-website-us-east-1.amazonaws.com/releases/latest/cf-cli_amd64.deb && \
     dpkg -i /tmp/deb.deb && \
     wget -O /tmp/deb.deb https://www.dropbox.com/download?dl=packages/ubuntu/dropbox_1.6.0_amd64.deb && \
