Add proper README to Ruby project

--- a/ws-ruby/Dockerfile
+++ b/ws-ruby/Dockerfile
@@ -1,5 +1,9 @@
 FROM cloud9/workspace
 MAINTAINER Fabian Jakobs <fabian@c9.io>
 
+RUN echo "Version 1.0"
+
 RUN rm -rf /home/ubuntu/workspace
 RUN sudo -u ubuntu -i bash -l -c "rails new /home/ubuntu/workspace"
+
+ADD ./files /home/ubuntu/
