Improve Ruby container and add newline at eof in strongloop app.js

--- a/ws-ruby/Dockerfile
+++ b/ws-ruby/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Fabian Jakobs <fabian@c9.io>
 RUN echo "Version 1.0"
 
 RUN rm -rf /home/ubuntu/workspace
-ADD ./files /home/ubuntu
+ADD ./files/workspace /home/ubuntu/workspace
 
-RUN chown -R ubuntu:ubuntu /home/ubuntu
+RUN chown -R ubuntu:ubuntu /home/ubuntu/workspace
 RUN sudo -u ubuntu -i bash -l -c "rails new /home/ubuntu/workspace"
