fix wordpress issue

--- a/workspace/files/etc/apache2/sites-available/001-cloud9.conf
+++ b/workspace/files/etc/apache2/sites-available/001-cloud9.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:8080>
     DocumentRoot /home/ubuntu/workspace
-    ServerName https://${C9_PROJECT}-c9-${C9_PROJECT}.c9.io
+    ServerName https://${C9_PROJECT}-c9-${C9_PROJECT}.c9.io:8080
 
     LogLevel info
 
