disable /bin/sync inside of containers

--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -168,7 +168,9 @@ RUN cp /tmp/homedir/.gitignore /tmp/homedir/.hgignore && \
     chmod 644 /etc/profile.d/cloud9.sh /etc/apache2/envvars && \
     sudo -u ubuntu -i bash -c "mkdir -p /home/ubuntu/.ssh" && \
     sed -Ei 's/(.*)secure_path.*/\1!secure_path/' /etc/sudoers && \
-    touch /etc/init.d/systemd-logind
+    touch /etc/init.d/systemd-logind && \
+    rm /bin/sync && \
+    cp /bin/true /bin/sync
 
 # re-enable service startup. This line must come after all apt-get installs
 RUN rm -f /usr/sbin/policy-rc.d
