update docker images to use the new hostname

--- a/workspace/files/etc/apache2/sites-available/001-cloud9.conf
+++ b/workspace/files/etc/apache2/sites-available/001-cloud9.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:8080>
     DocumentRoot /home/ubuntu/workspace
-    ServerName https://${C9_PROJECT}-c9-${C9_PROJECT}.c9.io:8080
+    ServerName https://${C9_HOSTNAME}:8080
 
     LogLevel info
 
@@ -14,5 +14,5 @@
     </Directory>
 </VirtualHost>
 
-ServerName https://${C9_PROJECT}-c9-${C9_PROJECT}.c9.io
+ServerName https://${C9_HOSTNAME}
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
