--- a/ws-python/Dockerfile
+++ b/ws-python/Dockerfile
@@ -1,7 +1,7 @@
 FROM cloud9/workspace
 MAINTAINER Fabian Jakobs <fabian@c9.io
 
-RUN pip install django
+RUN pip install Django==1.7.1
 
 ADD ./files /home/ubuntu
 
