Enable PHP error reporting by default

--- a/workspace/files/etc/php5/mods-available/c9.ini
+++ b/workspace/files/etc/php5/mods-available/c9.ini
@@ -1,4 +1,13 @@
 ; configuration defaults for Cloud9 IDE workspaces
 ; priority=80
 
-date.timezone = Europe/Amsterdam
+date.timezone = UTC
+
+display_errors = On
+display_startup_errors = On
+track_errors = On
+
+error_reporting = E_ALL & ~E_NOTICE & ~E_STRICT & ~E_DEPRECATED
+
+max_input_time = 300
+max_execution_time = 300
