Always install mocha

--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -178,6 +178,8 @@ RUN apt-file update
 # all changes go down here:
 # RUN ...
 
+RUN apt-get install -y mocha@2.2.5
+
 # setup the system
 RUN echo -n "" > /etc/motd && \
     echo "export PATH=/bin:/usr/bin:/sbin:/usr/sbin:/user/local/bin:/user/local/sbin" >> /root/.bashrc && \
