Correct permissions on phpmyadmin tmp dir so importing works

--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -202,6 +202,7 @@ RUN cp /tmp/homedir/.gitignore /tmp/homedir/.hgignore && \
     chown -R ubuntu:ubuntu /home/ubuntu/lib && \
     chown root:root /etc/profile.d/cloud9.sh /etc/apache2/envvars && \
     chmod 644 /etc/profile.d/cloud9.sh /etc/apache2/envvars && \
+    chmod 777 /var/lib/phpmyadmin/tmp && \
     sudo -u ubuntu -i bash -c "mkdir -p /home/ubuntu/.ssh" && \
     sed -Ei 's/(.*)secure_path.*/\1!secure_path/' /etc/sudoers && \
     touch /etc/init.d/systemd-logind && \
