--- a/ws-android-sdk/Dockerfile
+++ b/ws-android-sdk/Dockerfile
@@ -1,4 +1,7 @@
 FROM cloud9/workspace
+
+# first attempt by Jeremy Ellis to add the Android_SDK
+
 MAINTAINER Fabian Jakobs <fabian@c9.io>
 
 ADD ./files/workspace /home/ubuntu/workspace
